--- a/Granular PMD Analysis.ipynb
+++ b/Granular PMD Analysis.ipynb
@@ -1104,7 +1104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [
     {
@@ -1137,28 +1137,44 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>btw_1and2yrs</td>\n",
+       "      <td>pmd_promo</td>\n",
+       "      <td>455136</td>\n",
+       "      <td>2490864</td>\n",
+       "      <td>0.182722</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>btw_2and3yrs</td>\n",
+       "      <td>pmd_promo</td>\n",
+       "      <td>645152</td>\n",
+       "      <td>3320635</td>\n",
+       "      <td>0.194286</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>btw_3and4yrs</td>\n",
+       "      <td>pmd_promo</td>\n",
+       "      <td>566647</td>\n",
+       "      <td>3143408</td>\n",
+       "      <td>0.180265</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10</th>\n",
+       "      <td>btw_4and5yrs</td>\n",
+       "      <td>pmd_promo</td>\n",
+       "      <td>423046</td>\n",
+       "      <td>2426680</td>\n",
+       "      <td>0.174331</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
        "      <th>13</th>\n",
        "      <td>over_5years</td>\n",
        "      <td>pmd_promo</td>\n",
        "      <td>197270</td>\n",
        "      <td>1157808</td>\n",
        "      <td>0.170382</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>14</th>\n",
-       "      <td>over_5years</td>\n",
-       "      <td>vendisto_promo</td>\n",
-       "      <td>8364</td>\n",
-       "      <td>1157808</td>\n",
-       "      <td>0.007224</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>15</th>\n",
-       "      <td>under_year</td>\n",
-       "      <td>non_promo</td>\n",
-       "      <td>732585</td>\n",
-       "      <td>905553</td>\n",
-       "      <td>0.808992</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>16</th>\n",
@@ -1168,34 +1184,27 @@
        "      <td>905553</td>\n",
        "      <td>0.184503</td>\n",
        "    </tr>\n",
-       "    <tr>\n",
-       "      <th>17</th>\n",
-       "      <td>under_year</td>\n",
-       "      <td>vendisto_promo</td>\n",
-       "      <td>5891</td>\n",
-       "      <td>905553</td>\n",
-       "      <td>0.006505</td>\n",
-       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "   tenure_years      promo_dist  units_x  units_y     share\n",
-       "13  over_5years       pmd_promo   197270  1157808  0.170382\n",
-       "14  over_5years  vendisto_promo     8364  1157808  0.007224\n",
-       "15   under_year       non_promo   732585   905553  0.808992\n",
-       "16   under_year       pmd_promo   167077   905553  0.184503\n",
-       "17   under_year  vendisto_promo     5891   905553  0.006505"
+       "    tenure_years promo_dist  units_x  units_y     share\n",
+       "1   btw_1and2yrs  pmd_promo   455136  2490864  0.182722\n",
+       "4   btw_2and3yrs  pmd_promo   645152  3320635  0.194286\n",
+       "7   btw_3and4yrs  pmd_promo   566647  3143408  0.180265\n",
+       "10  btw_4and5yrs  pmd_promo   423046  2426680  0.174331\n",
+       "13   over_5years  pmd_promo   197270  1157808  0.170382\n",
+       "16    under_year  pmd_promo   167077   905553  0.184503"
       ]
      },
-     "execution_count": 52,
+     "execution_count": 62,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "dd.tail()"
+    "dd[dd['promo_dist'] == 'pmd_promo']"
    ]
   },
   {
@@ -1226,7 +1235,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [
     {
@@ -1259,36 +1268,12 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>btw_1and2yrs</td>\n",
-       "      <td>non_promo</td>\n",
-       "      <td>5451</td>\n",
-       "      <td>9463</td>\n",
-       "      <td>0.576033</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>btw_1and2yrs</td>\n",
        "      <td>pmd_promo</td>\n",
        "      <td>3966</td>\n",
        "      <td>9463</td>\n",
        "      <td>0.419106</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>btw_1and2yrs</td>\n",
-       "      <td>vendisto_promo</td>\n",
-       "      <td>46</td>\n",
-       "      <td>9463</td>\n",
-       "      <td>0.004861</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>btw_2and3yrs</td>\n",
-       "      <td>non_promo</td>\n",
-       "      <td>30766</td>\n",
-       "      <td>48774</td>\n",
-       "      <td>0.630787</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
@@ -1298,33 +1283,57 @@
        "      <td>48774</td>\n",
        "      <td>0.376266</td>\n",
        "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>btw_3and4yrs</td>\n",
+       "      <td>pmd_promo</td>\n",
+       "      <td>24425</td>\n",
+       "      <td>84707</td>\n",
+       "      <td>0.288347</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10</th>\n",
+       "      <td>btw_4and5yrs</td>\n",
+       "      <td>pmd_promo</td>\n",
+       "      <td>23552</td>\n",
+       "      <td>89270</td>\n",
+       "      <td>0.263829</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>13</th>\n",
+       "      <td>over_5years</td>\n",
+       "      <td>pmd_promo</td>\n",
+       "      <td>13621</td>\n",
+       "      <td>51357</td>\n",
+       "      <td>0.265222</td>\n",
+       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "   tenure_years      promo_dist  encrypted_customer_id_x  \\\n",
-       "0  btw_1and2yrs       non_promo                     5451   \n",
-       "1  btw_1and2yrs       pmd_promo                     3966   \n",
-       "2  btw_1and2yrs  vendisto_promo                       46   \n",
-       "3  btw_2and3yrs       non_promo                    30766   \n",
-       "4  btw_2and3yrs       pmd_promo                    18352   \n",
+       "    tenure_years promo_dist  encrypted_customer_id_x  encrypted_customer_id_y  \\\n",
+       "1   btw_1and2yrs  pmd_promo                     3966                     9463   \n",
+       "4   btw_2and3yrs  pmd_promo                    18352                    48774   \n",
+       "7   btw_3and4yrs  pmd_promo                    24425                    84707   \n",
+       "10  btw_4and5yrs  pmd_promo                    23552                    89270   \n",
+       "13   over_5years  pmd_promo                    13621                    51357   \n",
        "\n",
-       "   encrypted_customer_id_y     share  \n",
-       "0                     9463  0.576033  \n",
-       "1                     9463  0.419106  \n",
-       "2                     9463  0.004861  \n",
-       "3                    48774  0.630787  \n",
-       "4                    48774  0.376266  "
+       "       share  \n",
+       "1   0.419106  \n",
+       "4   0.376266  \n",
+       "7   0.288347  \n",
+       "10  0.263829  \n",
+       "13  0.265222  "
       ]
      },
-     "execution_count": 59,
+     "execution_count": 61,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "reeng.head()"
+    "reeng[reeng['promo_dist'] == 'pmd_promo']"
    ]
   }
  ],
